# discord-package-watcher

./: .editorconfig  Cargo.toml  Makefile  README.md
.github/workflows/: ci-build.yml
src/: main.rs
systemd/: discord-package-watcher.service
